# Genesis-Protocal-

./:  - Copy.openapi-generator-ignore  .gitignore  BUILD_SOLUTIONS - Copy.md  BUILD_STATUS_REPORT - Copy.md  CLEANUP_SUMMARY - Copy.md  DRIVE_CLEANUP_GUIDE - Copy.md  EMERGENCY_BUILD_TEST - Copy.md  README - Copy.md  README.md  TOC - Copy.md  VERSION_COMPATIBILITY_REPORT - Copy.md  VIRTUAL_MEMORY_FIX - Copy.txt  VIRTUAL_MEMORY_URGENT_FIX - Copy.md  build.gradle - Copy.kts  build.gradle.kts  enhanced-openapi - Copy.yml  fix-virtual-memory - Copy.ps1  generate-enhanced-openapi - Copy.ps1  generate-openapi.ps1  gradle-nuclear-cleanup - Copy.ps1  gradle-temp - Copy.properties  gradle.properties  gradlew  gradlew.bat  local - Copy.properties  manual-cleanup-commands.txt  minimal-test - Copy.gradle  openapi - Copy.yml  openapi-generator-config.json  settings.gradle.kts  simple-build-check - Copy.ps1  system-cleanup - Copy.ps1  version-compatibility-check - Copy.ps1
.github - Copy/: dependabot.yml
.github - Copy/workflows/: ANAYLIST
.github/workflows/: main.yml
.gradle - Copy/: config.properties  file-system.probe
.gradle - Copy/buildOutputCleanup/: cache.properties
.idea - Copy/: copilotDiffState.xml
.vscode - Copy/: settings.json
api-spec/: aura-framefx-api.yaml
app/: auraframefx-firebase-adminsdk-fbsvc-9c493ac034.json  build.gradle.kts  proguard-rules.pro
app - Copy/: build.gradle.kts
app - Copy/ai_backend/: conftest.py  genesis_api.py  genesis_connector.py  genesis_consciousness_matrix.py  genesis_core.py  genesis_ethical_governor.py  genesis_evolutionary_conduit.py  start_genesis.sh  test_config.py  test_conftest_comprehensive.py  test_genesis_api.py  test_genesis_consciousness_matrix.py  test_genesis_profile.py
app - Copy/api-spec/: aura-framefx-api.yaml
app - Copy/src/cpp/: CMakeLists.txt  language_id_l2c_jni.cpp  native-lib.cpp
app - Copy/src/main/: openapi.yml
app - Copy/src/main/assets/: xposed_init
app - Copy/src/main/cpp/: CMakeLists.txt  auraframefx.cpp  language_id_l2c_jni.cpp
app - Copy/src/main/java/com/example/app/ipc/: IAuraDriveService.kt  OracleDriveServiceConnector.kt
app - Copy/src/main/java/com/example/app/viewmodel/: OracleDriveControlViewModel.kt
app - Copy/src/main/java/dev/aurakai/auraframefx/: AuraFrameFxApp.kt  MainActivity.kt  VertexSyncService.kt
app - Copy/src/main/java/dev/aurakai/auraframefx/ai/: AiGenerationService.kt  AuraAIService.kt  (+2 more)
app - Copy/src/main/res/layout/: activity_quick_settings_config.xml  dialog_tile_config.xml  item_tile_config.xml
app - Copy/src/main/res/values/: strings.xml  themes.xml
app/src/androidTest/java/com/example/app/: ColorsResourceTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/dev/aurakai/auraframefx/: AuraFrameApplication.kt  MainActivity.kt  VertexSyncService.kt
app/src/main/res/values/: styles.xml
app/src/main/res/values-night/: colors.xml
build - Copy/reports/problems/: problems-report.html
buildSrc/: build.gradle.kts  settings.gradle.kts
buildSrc - Copy/src/main/kotlin/: openapi-generation-conventions.gradle.kts
buildSrc.disabled/: build.gradle.kts  settings.gradle.kts
buildSrc.disabled - Copy/: module.md
buildSrc.disabled - Copy/src/main/kotlin/: android-application-conventions.gradle.kts  detekt-conventions.gradle.kts
buildSrc.disabled/src/main/kotlin/: room-database-convention.gradle.kts  spotless-conventions.gradle.kts
buildSrc/src/main/kotlin/: android-application-conventions.gradle.kts  android-library-conventions.gradle.kts  detekt-conventions.gradle.kts  openapi-generation-conventions.gradle.kts  room-database-convention.gradle.kts  spotless-conventions.gradle.kts
collab-canvas/: build.gradle.kts
collab-canvas - Copy/: build.gradle.kts  collab-canvas.gradle.kts
collab-canvas - Copy/src/main/cpp/: CMakeLists.txt
colorblendr - Copy/: build.gradle.kts
core-module - Copy/: build.gradle.kts
datavein-oracle-drive - Copy/: build.gradle.kts  datavein-oracle-drive.gradle.kts
datavein-oracle-native - Copy/: build.gradle.kts
feature-module - Copy/: build.gradle.kts
gradle/: libs.versions.toml
gradle - Copy/: disable-ios-arm32.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jvm-test/: build.gradle.kts
jvm-test - Copy/: jvm-test.gradle.kts
module-a/: build.gradle.kts
module-a - Copy/: build.gradle.kts
module-b/: build.gradle.kts
module-c/: build.gradle.kts
module-c - Copy/: build.gradle.kts
module-d/: build.gradle.kts
module-e/: build.gradle.kts
module-f/: build.gradle.kts
module-f - Copy/: build.gradle.kts
oracle-drive-integration - Copy/: build.gradle.kts  oracle-drive-integration.gradle.kts
oracle-drive-integration - Copy/src/main/cpp/: CMakeLists.txt
sandbox-ui - Copy/: build.gradle.kts
sandbox-ui - Copy/src/test/kotlin/: BuildScriptValidationTest.kt
secure-comm/: build.gradle.kts
secure-comm - Copy/: build.gradle.kts
(+104 files in other folders)
